# web-cam-viewer

./: CMakeLists.txt  README.md
src/: main.cpp  webcamviewer.cpp  webcamviewer.h
